styles/style.css
/* This section of the style sheet is taken from https://www.w3schools.com/howto/howto_js_accordion.asp */


/* Style the buttons that are used to open and close the accordion panel */

.accordion {
    background-color: #eee;
    color: #444;
    cursor: pointer;
    padding: 10px;
    width: 100%;
    text-align: left;
    border-width: 1px 1px 0 1px;
    border-color: lightgray;
    border-style: solid;
    outline: none;
    transition: 0.4s;
}

#displayProduct .accordion:last-of-type {
    border-bottom: 1px solid lightgray;
}


/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */

.active,
.accordion:hover {
    background-color: #ccc;
}


/* Style the accordion panel. Note: hidden by default */

.panel {
    padding: 0 18px;
    background-color: white;
    display: none;
    overflow: hidden;
}

.accordion:after {
    content: '\02795';
    /* Unicode character for "plus" sign (+) */
    font-size: 13px;
    color: white;
    float: right;
    margin-left: 5px;
}

.accordion.active:after {
    content: "\2796";
    /* Unicode character for "minus" sign (-) */
}


/* This section of the style sheet is taken from https://www.w3schools.com/howto/howto_js_tabs.asp> */


/* Style the tab */

.tab {
    overflow: hidden;
    border: 1px solid #ccc;
    background-color: #f1f1f1;
}


/* Style the buttons that are used to open the tab content */

.tab button {
    background-color: inherit;
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 14px 16px;
    transition: 0.3s;
}


/* Change background color of buttons on hover */

.tab button:hover {
    background-color: #ddd;
}


/* Create an active/current tablink class */

.tab button.active {
    background-color: #ccc;
}


/* Style the tab content */

.tabcontent {
    display: none;
    padding: 6px 12px;
    border: 1px solid #ccc;
    border-top: none;
    line-height: 1.7;
}


/* Custom styles */

html {
    font: 14px Arial;
    margin: 1em 2em 1em;
}

.btn-primary {
    color: #fff;
    background-color: #007bff;
    border-color: #007bff;
    border-radius: 3px;
    text-align: center;
    margin-top: 10px;
    padding: 5px 10px;
}

.btn-primary:hover {
    color: #fff;
    background-color: #0069d9;
    border-color: #0062cc;
    text-decoration: none;
}

img {
    width: 150px;
    height: 150px;
}

#vegFruits,
#dairy,
#meat,
#grains,
#other,
#resultsList {
    text-align: center;
    flex-wrap: wrap;
}

#resultsList {
    display: flex;
    p {
        margin: 0;
    }
}

#displayCart p span {
    font-size: 20px;
    font-weight: 700;
}


/* Footer styles */

footer {
    color: black;
    background-color: #f1f1f1;
    padding: 10px;
    border: 1px solid #ccc;
}

